--- a/angular.json
+++ b/angular.json
@@ -3,19 +3,9 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Consultas-app": {
+    "consultorio": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "standalone": false
-        },
-        "@schematics/angular:directive": {
-          "standalone": false
-        },
-        "@schematics/angular:pipe": {
-          "standalone": false
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -24,9 +14,6 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -34,16 +21,14 @@
                 "input": "public"
               }
             ],
-           "styles": [
-
-            "node_modules/bootstrap/dist/css/bootstrap.min.css",
-            "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-            "src/styles.css"
-
-          ],
-          "scripts": [
-            "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-          ]
+            "styles": [
+              "src/styles.css"
+            ],
+            "server": "src/main.server.ts",
+            "outputMode": "server",
+            "ssr": {
+              "entry": "src/server.ts"
+            }
           },
           "configurations": {
             "production": {
@@ -73,10 +58,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "Consultas-app:build:production"
+              "buildTarget": "consultorio:build:production"
             },
             "development": {
-              "buildTarget": "Consultas-app:build:development"
+              "buildTarget": "consultorio:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -87,10 +72,6 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
@@ -107,6 +88,6 @@
     }
   },
   "cli": {
-    "analytics": "3f375ae5-5d90-4763-bb35-d5265060b8d8"
+    "analytics": "46fb7d23-3b25-47ee-b336-b9ffaf7146b3"
   }
 }
